fix overflow error and add input value with command

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  max-height: 100vh;
+  overflow-y: hidden;
 }
 
 .form {
@@ -15,9 +17,11 @@
   height: 100%;
   justify-content: center;
   text-align: center;
+  overflow-y: hidden;
 }
 
 .form > textarea {
+  flex: 1;
   background-color: #222;
   color: #fff;
   border: none;
@@ -26,7 +30,8 @@
   margin: 10px;
   border-radius: 10px;
   font-size: 1.2rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  resize: none;
 }
 
 .btn {
@@ -57,9 +62,58 @@
   flex-direction: column;
   justify-content: flex-start;
   text-align: left;
+  overflow-y: hidden;
+  max-height: 100vh;
 }
 
 .helper {
   padding: 0px 10px;
   text-align: left;
+}
+
+.list {
+  flex: 1;
+  overflow: scroll;
+
+  list-style: decimal;
+  text-align: left;
+  gap: 10px;
+}
+
+.command {
+  display: flex;
+  flex-direction: row;
+}
+
+.command > input {
+  flex: 1;
+  background-color: #222;
+  color: #fff;
+  border: none;
+  outline: none;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  resize: none;
+}
+
+.btn.disabled {
+  background-color: #666;
+  cursor: not-allowed;
+}
+
+.list {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
+  list-style: decimal;
+  text-align: left;
+  gap: 10px;
+  background-color: #222;
+  border-radius: 10px;
+  padding: 10px 10px 10px 30px;
+  margin: 10px;
 }
