--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,9 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
